--- a/po/wesnoth-units/nl.po
+++ b/po/wesnoth-units/nl.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.11+CVS\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 01:27 UTC\n"
-"PO-Revision-Date: 2019-03-06 13:43+0100\n"
+"PO-Revision-Date: 2019-03-14 13:59+0100\n"
 "Last-Translator: Merijn de Vet <merijndevet@hotmail.com>\n"
 "Language-Team: Dutch translation <merijndevet@hotmail.comm>\n"
 "Language: nl_NL\n"
@@ -1209,8 +1209,8 @@ msgid ""
 "leader for supremacy, and only if he is sure of the support of his fellow "
 "drakes."
 msgstr ""
-"Het ontbreekt de Vuurhartdraken aan de kracht om andere hoog gerankte Draken "
-"in een enkel gevecht te verslaan, maar ze kiezen er altijd voor om "
+"Het ontbreekt de Vuurhartdraken aan de kracht om andere Draken met een hoge "
+"rang in een enkel gevecht te verslaan, maar ze kiezen er altijd voor om "
 "confrontaties binnen hun stam te vermijden. De ervaring heeft elke Draak van "
 "deze grootte het bereik van zijn gezag laten inzien: waar hij diegenen die "
 "hij leidt kan verdringen en wanneer het het beste is om hen hun eigen "
@@ -2896,6 +2896,18 @@ msgstr "Wolfruiter"
 
 #. [unit_type]: id=Wolf Rider, race=wolf
 #: data/core/units/goblins/Wolf_Rider.cfg:30
+#, fuzzy
+#| msgid ""
+#| "No one is quite sure how the practice of taming and riding wolves came "
+#| "into being, but the advantages of it for a goblin are obvious. Goblins "
+#| "are much smaller and weaker than their orcish kin and are often sent to "
+#| "the most dangerous and unwanted parts of a fight. Any who manage to tame "
+#| "a mount have a much safer role in combat.\n"
+#| "\n"
+#| "Though few wolves could even stand with the weight of a true orc on their "
+#| "back, a goblin is quite within many wolves’ ability to carry swiftly. "
+#| "Unlike horses, these mounts have a rather easy time traversing the "
+#| "mountains, though water and woods will still slow them down."
 msgid ""
 "No one is quite sure how the practice of taming and riding wolves came into "
 "being, but the advantages of it for a goblin are obvious. Goblins are "
@@ -2914,10 +2926,10 @@ msgstr ""
 "kleiner en veel zwakker dan orks. Degenen die een rijdier kunnen vinden, "
 "verkrijgen een sterkere, veiligere positie in de strijd.\n"
 "\n"
-"Wolven kunnen het gewicht van een man in een harnas niet dragen, maar een "
-"kobold met leren bekleding is een veel lichtere last. Anders dan paarden, "
-"bewegen deze rijdieren makkelijk door de bergen, hoewel water en bos ook hen "
-"vertragen."
+"Wolven zullen waarschijnlijk geen mens in een volledig harnas kunnen dragen, "
+"maar een kobold met leren bekleding is een veel lichtere last. Anders dan "
+"paarden, bewegen deze rijdieren makkelijk door de bergen, hoewel water en "
+"bos ook hen vertragen."
 
 #. [unit_type]: id=Gryphon, race=gryphon
 #: data/core/units/gryphons/Gryphon.cfg:4
@@ -4509,7 +4521,7 @@ msgstr ""
 #. [unit_type]: id=Merman Fighter, race=merman
 #: data/core/units/merfolk/Fighter.cfg:4
 msgid "Merman Fighter"
-msgstr "Meerman Strijder"
+msgstr "Meerman Krijger"
 
 #. [unit_type]: id=Merman Fighter, race=merman
 #: data/core/units/merfolk/Fighter.cfg:17
@@ -4744,7 +4756,7 @@ msgstr ""
 #. [unit_type]: id=Merman Warrior, race=merman
 #: data/core/units/merfolk/Warrior.cfg:4
 msgid "Merman Warrior"
-msgstr "Meerman Krijger"
+msgstr "Meerman Strijder"
 
 #. [unit_type]: id=Merman Warrior, race=merman
 #: data/core/units/merfolk/Warrior.cfg:17
@@ -4754,7 +4766,7 @@ msgid ""
 "of other races, but doubly so considering the difficulties of fighting "
 "underwater, as any who try to match them in their homes can attest."
 msgstr ""
-"De Meerman Krijgers vormen de kern van de legers van het Watervolk. Ze "
+"De Meerman Strijders vormen de kern van de legers van het Watervolk. Ze "
 "hanteren hun drietanden met een vaardigheid en ijver die indrukwekkend zijn, "
 "zelfs vergeleken met de soldaten van andere rassen. Met name met de "
 "inachtneming van de moeilijkheid om onder water te vechten, zoals iedereen "
@@ -5121,7 +5133,7 @@ msgstr ""
 #. [unit_type]: id=Naga Fighter, race=naga
 #: data/core/units/nagas/Fighter.cfg:4
 msgid "Naga Fighter"
-msgstr "Naga Vechter"
+msgstr "Naga Krijger"
 
 #. [unit_type]: id=Naga Fighter, race=naga
 #: data/core/units/nagas/Fighter.cfg:18
@@ -5143,7 +5155,7 @@ msgstr ""
 #. [female]
 #: data/core/units/nagas/Fighter.cfg:49
 msgid "Nagini Fighter"
-msgstr "Naga Vechtster"
+msgstr "Naga Krijgster"
 
 #. [unit_type]: id=Naga Myrmidon, race=naga
 #: data/core/units/nagas/Myrmidon.cfg:4
@@ -5188,7 +5200,7 @@ msgstr ""
 #. [unit_type]: id=Naga Warrior, race=naga
 #: data/core/units/nagas/Warrior.cfg:4
 msgid "Naga Warrior"
-msgstr "Naga Krijger"
+msgstr "Naga Strijder"
 
 #. [unit_type]: id=Naga Warrior, race=naga
 #: data/core/units/nagas/Warrior.cfg:18
@@ -5200,7 +5212,7 @@ msgid ""
 "from blows. This makes them potent on land, but the friction of water "
 "greatly impedes the technique."
 msgstr ""
-"De jonge Naga Vechters kijken vol verwachting uit naar de dag dat ze hun "
+"De jonge Naga Krijgers kijken vol verwachting uit naar de dag dat ze hun "
 "tweede zwaardblad verdienen. Hun beoefening van de dubbelbladige "
 "zwaardtechniek verschilt van die van de Orks en andere rassen, omdat ze "
 "geleerd hebben hun slangenvorm te gebruiken. Draaiend en duikelend ontwijken "
@@ -5522,7 +5534,7 @@ msgstr ""
 #. [unit_type]: id=Orcish Warrior, race=orc
 #: data/core/units/orcs/Warrior.cfg:4
 msgid "Orcish Warrior"
-msgstr "Orkkrijger"
+msgstr "Orkstrijder"
 
 #. [unit_type]: id=Orcish Warrior, race=orc
 #: data/core/units/orcs/Warrior.cfg:17
@@ -5534,7 +5546,7 @@ msgid ""
 "Despite their position, they rarely possess the commanding skills held by "
 "the leaders of other armies."
 msgstr ""
-"Orkkrijgers zijn die Orks die hun kracht hebben bewezen op het slagveld en "
+"Orkstrijders zijn die Orks die hun kracht hebben bewezen op het slagveld en "
 "ervoor kiezen om hun vaardigheden tentoon te spreiden door in elke hand met "
 "een zwaard te vechten. Hun bekwaamheid in de strijd heeft hen het respect "
 "van andere Orks opgeleverd, en ze zullen doorgaans gezien worden door "
@@ -5766,7 +5778,7 @@ msgstr "vuurgolf"
 #. [unit_type]: id=Troll Warrior, race=troll
 #: data/core/units/trolls/Warrior.cfg:4
 msgid "Troll Warrior"
-msgstr "Trolkrijger"
+msgstr "Trolstrijder"
 
 #. [unit_type]: id=Troll Warrior, race=troll
 #: data/core/units/trolls/Warrior.cfg:18
@@ -5785,8 +5797,8 @@ msgstr ""
 "gezien met primitieve bepantsering en met zware metalen hamers. Men vermoedt "
 "dat hun Orkse vrienden deze wapens gesmeed hebben, aangezien in Trollenholen "
 "zelden gereedschap wordt aangetroffen en al helemaal geen bewijzen voor "
-"metaalbewerking. Gegeven het gevaar van een Trol in het gevecht is de "
-"gedachte aan een volledig uitgeruste trol uiterst beangstigend."
+"metaalbewerking. Het gevaar van een Trol in het gevecht maakt de gedachte "
+"aan een volledig uitgeruste Trol uiterst beangstigend."
 
 #. [unit_type]: id=Troll Whelp, race=troll
 #: data/core/units/trolls/Whelp.cfg:4
@@ -6925,6 +6937,31 @@ msgstr ""
 #~ "bepantserde infanterie zal een aantal schoten niet overleven. De Elfse "
 #~ "Precisieschutters hebben hun beroep tot in de hoogste vorm aangescherpt "
 #~ "en zijn de onbetwiste meesters in het boogschieten."
+
+#~ msgid ""
+#~ "Battle experience strengthens not only the combat prowess of both mount "
+#~ "and rider, but also heartens the bond between them. While a human knight "
+#~ "may ride different steeds into battle, a ‘goblin knight’ refers to goblin "
+#~ "and wolf together as a single unit, fiercely loyal to one another almost "
+#~ "to a fault.\n"
+#~ "\n"
+#~ "Among orcs, the riders are treated as a class above goblins, even when "
+#~ "separated from their mount. Orcish grunts, while feeling themselves "
+#~ "superior to goblins, recognize that picking a fight with the rider is "
+#~ "also picking a fight with jaws that strike faster than a sword, and "
+#~ "almost as hard."
+#~ msgstr ""
+#~ "Gevechtservaring versterkt niet alleen de kracht van het rijdier en de "
+#~ "rijder, maar vergroot ook de band die ze met elkaar hebben. Hoewel een "
+#~ "menselijke ridder op meerdere paarden rijdt gedurende een oorlog, zal een "
+#~ "'Kobold Roofridder, zo worden Kobold en Wolf samen genoemd, extreme "
+#~ "loyaliteit vertonen aan de wederhelft.\n"
+#~ "\n"
+#~ "Onder de Orks, de Roofridders worden hoger geacht dan de Kobolds zelf, "
+#~ "zelfs wanneer ze zich zonder wolf verplaatsen. Orkgrommers, die zichzelf "
+#~ "belangrijker vinden dan Roofridders, weten dat een gevecht met een "
+#~ "Roofridder gelijk staat aan een gevecht met kaken die sneller zijn dan "
+#~ "een zwaard, en net zo hard en scherp."
 
 #~ msgid ""
 #~ "In any race, there are always those rare individuals who, by stroke of "
