--- a/po/wesnoth-editor/nl.po
+++ b/po/wesnoth-editor/nl.po
@@ -9,43 +9,40 @@ msgstr ""
 "Project-Id-Version: wesnoth-editor\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 04:26+0300\n"
-"PO-Revision-Date: 2010-12-27 17:53+0100\n"
+"PO-Revision-Date: 2019-03-13 08:26+0100\n"
 "Last-Translator: Alexander van Gessel <ai0867@gmail.com>\n"
 "Language-Team: Dutch <AI0867@gmail.com>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Dutch\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Poedit 2.2.1\n"
 "X-Poedit-Basepath: /home/koan/wesnoth\n"
 
 #. [brush]: id=brush-1
 #: data/core/editor/brushes.cfg:6
 msgid "Single Hex"
-msgstr "Enkele hex"
+msgstr "Enkele Tegel"
 
 #. [brush]: id=brush-2
 #: data/core/editor/brushes.cfg:16
 msgid "Radius 1 Hex"
-msgstr "Radius 1 Hex"
+msgstr "Radius 1 Tegel"
 
 #. [brush]: id=brush-3
 #: data/core/editor/brushes.cfg:26
 msgid "Radius 2 Hex"
-msgstr "Radius 2 Hex"
+msgstr "Radius 2 Tegel"
 
 #. [brush]: id=brush-nw-se
 #: data/core/editor/brushes.cfg:47
 msgid "Hex Line NW-SE"
-msgstr "Hex lijn NW-ZO"
+msgstr "Tegel Lijn NW-ZO"
 
 #. [brush]: id=brush-sw-ne
 #: data/core/editor/brushes.cfg:63
-#, fuzzy
-#| msgid "Hex Line NW-SE"
 msgid "Hex Line SW-NE"
-msgstr "Hex lijn NW-ZO"
+msgstr "Tegel Lijn NW-ZO"
 
 #. [editor_group]: id=all
 #: data/core/editor/terrain-groups.cfg:11
@@ -80,7 +77,7 @@ msgstr "bos"
 #. [editor_group]: id=fall
 #: data/core/editor/terrain-groups.cfg:52
 msgid "fall"
-msgstr ""
+msgstr "herfst"
 
 #. [editor_group]: id=frozen
 #: data/core/editor/terrain-groups.cfg:59
@@ -130,54 +127,52 @@ msgstr ""
 #. [editor_times]: id=test
 #: data/core/editor/time-of-day.cfg:10
 msgid "Test"
-msgstr ""
+msgstr "Test"
 
 #. [editor_times]: id=default
 #: data/core/editor/time-of-day.cfg:21
 msgid "Default"
-msgstr ""
+msgstr "Standaard"
 
 #. [editor_times]: id=summer
 #: data/core/editor/time-of-day.cfg:27
 msgid "Summer"
-msgstr ""
+msgstr "Zomer"
 
 #. [editor_times]: id=winter
 #: data/core/editor/time-of-day.cfg:33
 msgid "Winter"
-msgstr ""
+msgstr "Winter"
 
 #. [editor_times]: id=underground
 #: data/core/editor/time-of-day.cfg:39
 msgid "Underground"
-msgstr ""
+msgstr "Ondergronds"
 
 #. [editor_times]: id=deep_underground
 #: data/core/editor/time-of-day.cfg:45
 msgid "Deep Underground"
-msgstr ""
+msgstr "Diep Ondergronds"
 
 #. [editor_times]: id=indoors
 #: data/core/editor/time-of-day.cfg:51
 msgid "Indoors"
-msgstr ""
+msgstr "Binnen"
 
 #. [editor_times]: id=24
 #: data/core/editor/time-of-day.cfg:57
 msgid "24 Hour Schedule"
-msgstr ""
+msgstr "24 Uur Schema"
 
 #. [editor_times]: id=after_the_fall
 #: data/core/editor/time-of-day.cfg:63
 msgid "After the Fall"
-msgstr ""
+msgstr "Na de Herfst"
 
 #. [theme]: id=editor
 #: data/themes/editor.cfg:11
-#, fuzzy
-#| msgid "Quit Editor"
 msgid "theme^Editor"
-msgstr "Editor verlaten"
+msgstr "Editor"
 
 #. [menu]: id=menu-editor-file, type=turbo
 #: data/themes/editor.cfg:61
@@ -187,7 +182,7 @@ msgstr "Bestand"
 #. [menu]: id=menu-editor-recent
 #: data/themes/editor.cfg:72
 msgid "Load Recent"
-msgstr ""
+msgstr "Recente Laden"
 
 #. [menu]: id=menu-editor-map
 #: data/themes/editor.cfg:90
@@ -197,12 +192,12 @@ msgstr "Kaart"
 #. [menu]: id=menu-unit-facing
 #: data/themes/editor.cfg:98
 msgid "Unit Facing"
-msgstr ""
+msgstr "Eenheid gezichtsrichting"
 
 #. [menu]: id=menu-editor-transitions
 #: data/themes/editor.cfg:104
 msgid "Transition Update"
-msgstr ""
+msgstr "Transitie Update"
 
 #. [menu]: id=menu-editor-window
 #: data/themes/editor.cfg:111
@@ -212,22 +207,22 @@ msgstr "Venster"
 #. [menu]: id=menu-editor-areas
 #: data/themes/editor.cfg:120
 msgid "Areas"
-msgstr ""
+msgstr "Gebieden"
 
 #. [menu]: id=menu-editor-local-time
 #: data/themes/editor.cfg:128
 msgid "Assign Local Time"
-msgstr ""
+msgstr "Lokale Tijd Toewijzen"
 
 #. [menu]: id=menu-editor-local-schedule
 #: data/themes/editor.cfg:134
 msgid "Assign Local Time Schedule"
-msgstr ""
+msgstr "Lokaal Tijd Schema Toewijzen"
 
 #. [menu]: id=menu-editor-side
 #: data/themes/editor.cfg:142
 msgid "Side"
-msgstr ""
+msgstr "Kant"
 
 #. [label]: id=villages-icon
 #: data/themes/editor.cfg:159
@@ -237,46 +232,46 @@ msgstr "dorpen"
 #. [label]: id=units-icon
 #: data/themes/editor.cfg:175
 msgid "units"
-msgstr ""
+msgstr "eenheden"
 
 #. [menu]: id=switch_time
 #: data/themes/editor.cfg:454
 msgid "Time Schedule Menu"
-msgstr ""
+msgstr "Tijd Schema Menu"
 
 #. [menu]: id=menu-playlist
 #: data/themes/editor.cfg:465
 msgid "Playlist"
-msgstr ""
+msgstr "Afspeellijst"
 
 #. [menu]: id=menu-editor-schedule
 #: data/themes/editor.cfg:471
 msgid "Assign Time Schedule"
-msgstr ""
+msgstr "Wijs Tijd Schema Toe"
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:54
 msgid "Identifier: "
-msgstr ""
+msgstr "Identificatie: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:55
 msgid "Name: "
-msgstr ""
+msgstr "Naam: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:56
 msgid "Type: "
-msgstr ""
+msgstr "Soort: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:57
 msgid "Level: "
-msgstr ""
+msgstr "Rang: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:58
 msgid "Cost: "
-msgstr ""
+msgstr "Kosten: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:59
 msgid "Recruit: "
-msgstr ""
+msgstr "Rekruteren: "
 
 #: src/editor/controller/editor_controller.cpp:176
 msgid "Fatal error"
@@ -287,16 +282,12 @@ msgid "Do you really want to quit?"
 msgstr "Wilt u echt afsluiten?"
 
 #: src/editor/controller/editor_controller.cpp:208
-#, fuzzy
-#| msgid ""
-#| "Do you really want to quit? Changes in the map since the last save will "
-#| "be lost."
 msgid ""
 "Do you really want to quit? Changes to this map since the last save will be "
 "lost."
 msgstr ""
-"Wilt u echt afsluiten? Wijzigingen van de kaart sinds de laatste save gaan "
-"verloren."
+"Wil je echt afsluiten? Wijzigingen van de kaart sinds de laatste keer "
+"opslaan gaan verloren."
 
 #: src/editor/controller/editor_controller.cpp:210
 msgid ""
@@ -312,55 +303,47 @@ msgstr "Geen editor tijd-van-dag gevonden."
 
 #: src/editor/controller/editor_controller.cpp:1137
 msgid "Change Unit ID"
-msgstr ""
+msgstr "Verander Eenheid ID"
 
 #: src/editor/controller/editor_controller.cpp:1138
 msgid "ID:"
-msgstr ""
+msgstr "ID:"
 
 #: src/editor/controller/editor_controller.cpp:1154
 msgid "Rename Unit"
-msgstr ""
+msgstr "Hernoem Eenheid"
 
 #: src/editor/controller/editor_controller.cpp:1155
 msgid "Name:"
-msgstr ""
+msgstr "Naam:"
 
 #: src/editor/map/context_manager.cpp:189
 msgid "Load Map"
-msgstr ""
+msgstr "Laad Kaart"
 
 #: src/editor/map/context_manager.cpp:257 src/editor/map/map_context.cpp:831
-#, fuzzy
-#| msgid "(New Map)"
 msgid "New Map"
-msgstr "(Nieuwe kaart)"
+msgstr "Nieuwe Kaart"
 
 #: src/editor/map/context_manager.cpp:270 src/editor/map/map_context.cpp:831
-#, fuzzy
-#| msgid "(New Map)"
 msgid "New Scenario"
-msgstr "(Nieuwe kaart)"
+msgstr "Nieuw Scenario"
 
 #: src/editor/map/context_manager.cpp:326
 msgid "No Recent Files"
-msgstr ""
+msgstr "Geen Recente Bestanden"
 
 #: src/editor/map/context_manager.cpp:364
-#, fuzzy
-#| msgid "(New Map)"
 msgid "Unnamed Area"
-msgstr "(Nieuwe kaart)"
+msgstr "Naamloos Gebied"
 
 #: src/editor/map/context_manager.cpp:395
-#, fuzzy
-#| msgid "(New Map)"
 msgid "New Side"
-msgstr "(Nieuwe kaart)"
+msgstr "Nieuwe Kant"
 
 #: src/editor/map/context_manager.cpp:451
 msgid "Apply Mask"
-msgstr ""
+msgstr "Pas Masker Toe"
 
 #: src/editor/map/context_manager.cpp:460
 msgid "Error loading mask"
@@ -368,11 +351,11 @@ msgstr "Fout bij het laden van het masker"
 
 #: src/editor/map/context_manager.cpp:480
 msgid "Identifier:"
-msgstr ""
+msgstr "Identificatie:"
 
 #: src/editor/map/context_manager.cpp:480
 msgid "Rename Area"
-msgstr ""
+msgstr "Hernoem Gebied"
 
 #: src/editor/map/context_manager.cpp:494
 msgid "Choose Target Map"
@@ -384,16 +367,12 @@ msgid "Error loading map"
 msgstr "Fout bij het laden van de kaart"
 
 #: src/editor/map/context_manager.cpp:621
-#, fuzzy
-#| msgid "Save the Map As"
 msgid "Save Map As"
-msgstr "Sla de kaart op als"
+msgstr "Sla Kaart Op Als"
 
 #: src/editor/map/context_manager.cpp:642
-#, fuzzy
-#| msgid "Save the Map As"
 msgid "Save Scenario As"
-msgstr "Sla de kaart op als"
+msgstr "Sla Scenario Op Als"
 
 #: src/editor/map/context_manager.cpp:674
 msgid "No random map generators found."
@@ -409,30 +388,21 @@ msgid "Unsaved Changes"
 msgstr "Onopgeslagen wijzigingen"
 
 #: src/editor/map/context_manager.cpp:709
-#, fuzzy
-#| msgid ""
-#| "Do you want to discard all changes you made to the map since the last "
-#| "save?"
 msgid "Do you want to discard all changes made to the map since the last save?"
-msgstr ""
-"Wilt u alle wijzigingen sinds u laatst de kaart opsloeg ongedaan maken?"
+msgstr "Wilt u alle wijzigingen sinds de laatste keer opslaan ongedaan maken?"
 
 #: src/editor/map/context_manager.cpp:765
-#, fuzzy
-#| msgid "This map is already open."
 msgid "This scenario is already open."
-msgstr "Deze kaart is al open"
+msgstr "Dit scenario is al geopend."
 
 #: src/editor/map/context_manager.cpp:788
 #: src/editor/map/context_manager.cpp:851
 msgid "This map is already open."
-msgstr "Deze kaart is al open"
+msgstr "Deze kaart is al geopend."
 
 #: src/editor/map/context_manager.cpp:812
-#, fuzzy
-#| msgid "Map saved."
 msgid "Scenario saved."
-msgstr "Kaart opgeslagen."
+msgstr "Scenario opgeslagen."
 
 #: src/editor/map/context_manager.cpp:827
 msgid "Map saved."
@@ -458,7 +428,7 @@ msgstr ""
 #: src/editor/map/editor_map.cpp:148
 #: src/editor/palette/location_palette.cpp:111
 msgid "Player $side_num"
-msgstr ""
+msgstr "Speler $side_num"
 
 #: src/editor/map/editor_map.cpp:283
 msgid "The size of the target map is different from the current map"
@@ -469,10 +439,8 @@ msgid "File not found"
 msgstr "Bestand niet gevonden"
 
 #: src/editor/map/map_context.cpp:152
-#, fuzzy
-#| msgid "Empty map file"
 msgid "Empty file"
-msgstr "Leeg kaartbestand"
+msgstr "Leeg bestand"
 
 #: src/editor/map/map_context.cpp:208
 msgid ""
@@ -483,10 +451,8 @@ msgstr ""
 "naar een bestaand bestand"
 
 #: src/editor/map/map_context.cpp:600
-#, fuzzy
-#| msgid "Could not save the map: $msg"
 msgid "Could not save the scenario: $msg"
-msgstr "Kaart opslaan mislukt: $msg"
+msgstr "Opslaan van scenario mislukt: $msg"
 
 #: src/editor/map/map_context.cpp:632
 msgid "Could not save into scenario"
@@ -498,7 +464,7 @@ msgstr "Kaart opslaan mislukt: $msg"
 
 #: src/editor/palette/editor_palettes.cpp:51
 msgid "(Unknown Group)"
-msgstr ""
+msgstr "(Onbekende Groep)"
 
 #: src/editor/palette/editor_palettes.cpp:287
 msgid "(non-core)"
@@ -510,19 +476,19 @@ msgstr "Zal niet in het spel werken zonder extra werk."
 
 #: src/editor/palette/location_palette.cpp:230
 msgid "Go To"
-msgstr ""
+msgstr "Ga Naar"
 
 #: src/editor/palette/location_palette.cpp:237
 msgid "Add"
-msgstr ""
+msgstr "Voeg Toe"
 
 #: src/editor/palette/location_palette.cpp:239
 msgid "New Location Identifier"
-msgstr ""
+msgstr "Nieuwe Locatie Identificatie"
 
 #: src/editor/palette/location_palette.cpp:243
 msgid "Delete"
-msgstr ""
+msgstr "Verwijder"
 
 #: src/editor/palette/terrain_palettes.cpp:231
 msgid "FG: "
@@ -534,27 +500,32 @@ msgstr "AG: "
 
 #: src/gui/dialogs/editor/custom_tod.cpp:137
 msgid "Clipboard support not found, contact your packager"
-msgstr ""
+msgstr "Klembordondersteuning niet gevonden, neem contact op met packager"
 
 #: src/gui/dialogs/editor/custom_tod.cpp:201
-#, fuzzy
-#| msgid "Choose player"
 msgid "Choose File"
-msgstr "Kies speler"
+msgstr "Kies Bestand"
 
 #: src/gui/dialogs/editor/custom_tod.cpp:202
 msgid "Select"
-msgstr ""
+msgstr "Selecteer"
 
 #: src/gui/dialogs/editor/set_starting_position.cpp:88
-#, fuzzy
-#| msgid "(Player)^None"
 msgid "player^None"
 msgstr "Geen"
 
 #: src/gui/dialogs/editor/set_starting_position.cpp:101
 msgid "Player $player_number"
-msgstr ""
+msgstr "Speler $player_number"
+
+#~ msgid "time of day^None"
+#~ msgstr "Geen"
+
+#~ msgid "Error"
+#~ msgstr "Fout"
+
+#~ msgid "Invalid location id"
+#~ msgstr "Ongeldige locatie id"
 
 #~ msgid "(New Map)"
 #~ msgstr "(Nieuwe kaart)"
@@ -659,9 +630,6 @@ msgstr ""
 
 #~ msgid "BG"
 #~ msgstr "BG"
-
-#~ msgid "Error"
-#~ msgstr "Fout"
 
 #~ msgid ""
 #~ "Which player should start here? You can also use the 1-9 and delete keys "
