updated Italian translation

--- a/po/wesnoth-ei/it.po
+++ b/po/wesnoth-ei/it.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 01:26 UTC\n"
-"PO-Revision-Date: 2019-02-12 20:09+0100\n"
+"PO-Revision-Date: 2019-03-15 21:20+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -568,7 +568,7 @@ msgid ""
 msgstr ""
 "Questa è una vecchia via di fuga dall’avamposto. Sfortunatamente, queste "
 "caverne sono al momento infestate dai troll, che bloccano la nostra fuga "
-"attraverso il tunel."
+"attraverso il tunnel."
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:193
@@ -666,14 +666,19 @@ msgstr "Ti abbiamo trovato, ammasso di carne! Preparati a morire!"
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:351
+#, fuzzy
+#| msgid ""
+#| "They follow us... we must escape through this tunnel. That is "
+#| "unfortunate, for it will take us into the Estmark hills, beyond the "
+#| "borders of Wesnoth. But it is our only option."
 msgid ""
 "They follow us... we must get out of this tunnel. It looks like it is "
 "leading east. That is unfortunate, for it will take us beyond the borders of "
 "Wesnoth. But it is our only option."
 msgstr ""
-"Ci stanno seguendo... Dobbiamo uscire da questo tunnel! Sembra che conduca "
-"verso est: questo sarà un problema, poiché ci porterà oltre i confini di "
-"Wesnoth. Purtroppo, non abbiamo altra scelta."
+"Ci stanno seguendo... Dobbiamo uscire da questo tunnel. Sembra che conduca "
+"verso est: questo sarà un problema, poiché ci porterà nelle Colline "
+"Orientali, oltre i confini di Wesnoth. Purtroppo, non abbiamo altra scelta."
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:388
@@ -1711,8 +1716,10 @@ msgstr "Grug"
 
 #. [objective]: condition=win
 #: data/campaigns/Eastern_Invasion/scenarios/07a_The_Crossing.cfg:104
+#, fuzzy
+#| msgid "Move Gweddry, Owaec, and Dacyn across the river"
 msgid "Move Gweddry and Owaec across the river"
-msgstr "Sposta Gweddry e Owaec al di là del fiume"
+msgstr "Sposta Gweddry, Owaec e Dacyn al di là del fiume"
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/07a_The_Crossing.cfg:145
@@ -2671,7 +2678,7 @@ msgstr "Hai riottenuto $stored_player_gold monete d’oro!"
 #. [message]: speaker=unit
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:1245
 msgid "Phew! I made it."
-msgstr "Fiu! Ce l’ho fatta."
+msgstr "Uff! Ce l’ho fatta."
 
 #. [message]
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:1253
