--- a/po/wesnoth-l/it.po
+++ b/po/wesnoth-l/it.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-04 16:40 UTC\n"
-"PO-Revision-Date: 2019-02-12 20:50+0100\n"
+"PO-Revision-Date: 2019-03-12 19:16+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: it\n"
@@ -107,6 +107,12 @@ msgstr "Dallben"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:23
+#, fuzzy
+#| msgid ""
+#| "In the Era of Turmoil, during the reign of King Garard II, the border "
+#| "towns of Delwyn and Dallben in the Province of Annuvin grew increasingly "
+#| "dissatisfied with the King’s rule. Being preoccupied with the great wars, "
+#| "the King was unable to send adequate forces to protect the frontier."
 msgid ""
 "In the Era of Turmoil, during the reign of King Garard II, the border towns "
 "of Delwyn and Dallben in the province of Annuvin grew increasingly "
@@ -741,6 +747,12 @@ msgstr ""
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:177
+#, fuzzy
+#| msgid ""
+#| "You do not understand. We attacked a Wesnoth army patrol. Not only that, "
+#| "the leader was no man I had ever seen in Annuvin Province before. Never "
+#| "has one been sent out here as a patrol captain who was so ruthless and "
+#| "cruel."
 msgid ""
 "You do not understand. We attacked a Wesnoth army patrol. Not only that, the "
 "leader was no man I had ever seen in Annuvin province before. Never has one "
@@ -1011,6 +1023,11 @@ msgstr ""
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:207
+#, fuzzy
+#| msgid ""
+#| "What can we do then? We have brought with us many from Annuvin Province "
+#| "who are willing to fight, but our families are still at home. They will "
+#| "not last long if the Queen’s patrols return."
 msgid ""
 "What can we do then? We have brought with us many from Annuvin province who "
 "are willing to fight, but our families are still at home. They will not last "
@@ -2301,6 +2318,11 @@ msgstr "Nessuno nella fortezza sarebbe potuto uscirne vivo."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:928
+#, fuzzy
+#| msgid ""
+#| "After more than a week of fierce fighting, the main body of Asheviere’s "
+#| "host arrived from Weldyn. The battle was soon finished. Every last man "
+#| "from the Province of Annuvin was executed."
 msgid ""
 "After more than a week of fierce fighting, the main body of Asheviere’s host "
 "arrived from Weldyn. The battle was soon finished. Every last man from the "
@@ -2321,7 +2343,7 @@ msgid ""
 "No one was able to get to Baldras in time. He and many of his companions "
 "died that day beneath the stronghold of Halstead."
 msgstr ""
-"Nessuno riuscì a raggiungere Baldras in tempo. Egli e molti suoi compagni "
+"Nessuno riuscì a raggiungere Baldras in tempo. Lui e molti suoi compagni "
 "morirono quel giorno sotto la fortezza di Halstead."
 
 #. [message]: speaker=Baldras
