--- a/po/wesnoth-httt/it.po
+++ b/po/wesnoth-httt/it.po
@@ -1,12 +1,12 @@
 # translation of it.po to Italian
 # Luciano Montanaro <mikelima@cirulla.net>, 2006, 2007.
-# Antonio Rosella <arosella@yahoo.com>, 2007-2018.
+# Antonio Rosella <arosella@yahoo.com>, 2007-2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:30 UTC\n"
-"PO-Revision-Date: 2019-01-28 21:20+0100\n"
+"PO-Revision-Date: 2019-03-15 21:34+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -2407,6 +2407,10 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/scenarios/07_Crossroads.cfg:53
+#, fuzzy
+#| msgid ""
+#| "The Queen’s agents were still scouring the coastal regions, for news of "
+#| "Elensefar’s rescue had not yet reached her."
 msgid ""
 "The queen’s agents were still scouring the coastal regions, for news of "
 "Elensefar’s rescue had not yet reached her."
@@ -2830,6 +2834,12 @@ msgstr "Grazie per essere tornato ad aiutarci, Moremirmu."
 
 #. [message]: speaker=Moremirmu
 #: data/campaigns/Heir_To_The_Throne/scenarios/09_The_Valley_of_Death.cfg:390
+#, fuzzy
+#| msgid ""
+#| "It is both my duty and pleasure, my lord! We were dining with some royal "
+#| "guards of the Princess, taking a rest from our pilgrimage, when they "
+#| "spoke of how you were tricked into traveling these dangerous lands. We "
+#| "could do nothing but help you!"
 msgid ""
 "It is both my duty and pleasure, my lord! We were dining with some royal "
 "guards of the princess, taking a rest from our pilgrimage, when they spoke "
@@ -2839,7 +2849,8 @@ msgstr ""
 "È mio dovere e piacere, mio signore! Stavamo cenando con alcune delle "
 "guardie reali della principessa, durante una sosta dal nostro "
 "pellegrinaggio, quando ci hanno parlato di come siete stati portati con "
-"l’inganno a viaggiare per queste terre pericolose. Non potevamo non aiutarvi!"
+"l’inganno a viaggiare per queste terre pericolose. Non potevamo fare altro "
+"che aiutarvi!"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/09_The_Valley_of_Death.cfg:394
@@ -5408,7 +5419,7 @@ msgid ""
 msgstr ""
 "Adesso dobbiamo prendere una decisione. Andare a nord, oltre gli orchi, dove "
 "si estendono le antiche pianure innevate degli elfi, oppure a sud, oltre le "
-"armate dei morti viventi, dove ci attende la Palude dell’Orrore?"
+"armate dei morti viventi, dove ci attende la Palude dell’Orrore."
 
 #. [message]: speaker=unit
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:292
@@ -5498,6 +5509,10 @@ msgstr ""
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:339
+#, fuzzy
+#| msgid ""
+#| "Hold your tongue, Kalenz. The Princess is our ally and of royal blood. "
+#| "She deserves not your disrespect."
 msgid ""
 "Hold your tongue, Kalenz. The princess is our ally and of royal blood. She "
 "deserves not your disrespect."
@@ -5957,6 +5972,10 @@ msgstr "La tirannia di Aimucasur su questa terra maledetta è giunta a termine."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:342
+#, fuzzy
+#| msgid ""
+#| "Aimucasur? So you know of this Lich-Lord? Did you know him? Was he a "
+#| "powerful mage?"
 msgid ""
 "Aimucasur? So you know of this Lich-Lord? Did you know him? He was a "
 "powerful mage?"
@@ -6839,13 +6858,19 @@ msgstr ""
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/20a_North_Elves.cfg:521
+#, fuzzy
+#| msgid ""
+#| "Stop for a moment, Princess. Look — you can barely see them in the "
+#| "distance there, but the advance scouts have found each other. The Queen’s "
+#| "troops are marching full speed for the orcs’ camp, and vice-versa. These "
+#| "armies are out for blood."
 msgid ""
 "Stop for a moment, princess. Look — you can barely see them in the distance "
 "there, but the advance scouts have found each other. The Queen’s troops are "
 "marching full speed for the orcs’ camp, and vice-versa. These armies are out "
 "for blood."
 msgstr ""
-"Fermatevi un momento, Principessa. Guardate: da questa distanza si scorgono "
+"Fermatevi un momento, principessa. Guardate: da questa distanza si scorgono "
 "a malapena, ma gli esploratori mandati in avanscoperta si sono trovati a "
 "vicenda. Le truppe della regina marciano a tutta velocità verso "
 "l’accampamento degli orchi, e viceversa. Queste armate vogliono un bagno di "
@@ -6862,13 +6887,18 @@ msgstr ""
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/20a_North_Elves.cfg:529
+#, fuzzy
+#| msgid ""
+#| "(hushed) Our soldiers will defend us as we rush across the field. Sorry "
+#| "to be blunt, Princess, but you and I are the only ones who need to make "
+#| "it across alive."
 msgid ""
 "(hushed) Our soldiers will defend us as we rush across the field. Sorry to "
 "be blunt, princess, but you and I are the only ones who need to make it "
 "across alive."
 msgstr ""
 "(a bassa voce) I nostri soldati ci difenderanno mentre attraversiamo questa "
-"radura in tutta fretta. Perdonatemi la schiettezza, Principessa, ma noi due "
+"radura in tutta fretta. Perdonatemi la schiettezza, principessa, ma noi due "
 "siamo i soli che devono arrivare dall’altra parte sani e salvi."
 
 #. [message]: speaker=Delfador
@@ -7207,7 +7237,7 @@ msgstr ""
 #. [message]: speaker=Kalenz
 #: data/campaigns/Heir_To_The_Throne/scenarios/20b_Underground_Channels.cfg:296
 #, fuzzy
-#| msgid "Then we must hurry. Stand fast! We will send reinforcements."
+#| msgid "Then we must hurry. Stand fast! We shall send reinforcements."
 msgid "Then we must hurry. Stand fast, we will send reinforcements."
 msgstr ""
 "Allora dobbiamo affrettarci. In piedi, velocemente, vi manderemo dei "
@@ -8426,6 +8456,10 @@ msgstr "Allora, chi di voi è al comando? Chi di voi dobbiamo servire?"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/23_Test_of_the_Clans.cfg:472
+#, fuzzy
+#| msgid ""
+#| "You will serve us. You will protect our flanks while we make way straight "
+#| "for the Queen. With you on either flank, we can surely overcome her."
 msgid ""
 "You will serve us. You will protect our flanks while we make way straight "
 "for the queen. With you on either flank, we can surely overcome her."
@@ -9028,6 +9062,11 @@ msgstr "tormenta impetuosa"
 #. [unit_type]
 #: data/campaigns/Heir_To_The_Throne/units/Fighter.cfg:54
 #: data/campaigns/Heir_To_The_Throne/units/Fighter.cfg:60
+#, fuzzy
+#| msgid ""
+#| "Young and brash, Fighters attack with a sword, and are vulnerable to more "
+#| "seasoned enemies. However, they have the potential to become great "
+#| "warriors one day."
 msgid ""
 "Young and brash, Fighters attack with a sword, and are vulnerable to more "
 "seasoned enemies. However they have the potential to become great warriors "
@@ -9409,6 +9448,11 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/utils/intro.cfg:10
+#, fuzzy
+#| msgid ""
+#| "The Northern host encamped at Galcadar, by the Ford of Abez, and the king "
+#| "led his forces to meet them. Splitting his army in two, he led one half "
+#| "while his son, the crown prince Eldred, led the other."
 msgid ""
 "The Northern host encamped at Galcadar, by the ford of Abez, and the king "
 "led his forces to meet them. Splitting his army in two, he led one half "
@@ -9540,13 +9584,13 @@ msgstr ""
 "Asheviere su quelle terre..."
 
 #~ msgid "Meeting point"
-#~ msgstr "Punto di incotro"
+#~ msgstr "Punto di incontro"
 
 #~ msgid ""
 #~ "That noise was made by no troll! What manner of beast makes its den in "
 #~ "these forsaken caves?"
 #~ msgstr ""
-#~ "Questo non è un rimore prodotto da un troll! Quale bestia fa di queste "
+#~ "Questo non è un rumore prodotto da un troll! Quale bestia fa di queste "
 #~ "caverne abbandonate la propria tana?"
 
 #~ msgid ""
@@ -9591,7 +9635,7 @@ msgstr ""
 #~ "breaching this cave even now. We must tread with caution, for the very "
 #~ "ground we stand on may turn against us."
 #~ msgstr ""
-#~ "Principe Konrad, quel baccano non è stao prodotto da un essere vivente. "
+#~ "Principe Konrad, quel baccano non è stato prodotto da un essere vivente. "
 #~ "Era il suono della stessa terra che ribolle intorno a noi, del fuoco e "
 #~ "della lava che stanno squarciando la grotta in questo momento. Dobbiamo "
 #~ "procedere con cautela, perchè il terreno stesso su cui stiamo camminando "
