--- a/po/wesnoth-multiplayer/it.po
+++ b/po/wesnoth-multiplayer/it.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2019-01-27 11:51+0100\n"
+"PO-Revision-Date: 2019-03-11 23:04+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
@@ -797,6 +797,24 @@ msgstr "Blum Duk"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:147
+#, fuzzy
+#| msgid ""
+#| "Blum Duk was renowned among his goblin clan for having tamed one of the "
+#| "Dire Wolves of the mountains, and he had the courage to match. His "
+#| "leadership and skills alone were what kept the area’s goblins alive "
+#| "despite human and elvish menaces. Rumor had it that his wolf had slain "
+#| "fifty men and a hundred Elves.\n"
+#| "\n"
+#| "Thus, when he heard of the awful monster that was inhabiting the area, it "
+#| "was only natural that he ride out alone to face it. All the other goblins "
+#| "expected him to slay the creature easily and drag back its carcass to "
+#| "feast on.\n"
+#| "\n"
+#| "He was in for quite a shock. As soon as he saw the Basilisk, Blum Duk "
+#| "cowered in fright. He tried to wheel his wolf around to run away, but it "
+#| "wouldn’t move. As the creature stalked towards him, he screamed his last "
+#| "words: Good Gog, dog, are yer legs made of stone?!\n"
+#| "(inscribed by Elvish Pillager)"
 msgid ""
 "Blum Duk was renowned among his goblin clan for having tamed one of the Dire "
 "Wolves of the mountains, and he had the courage to match. His leadership and "
@@ -819,16 +837,18 @@ msgstr ""
 "permisero ai goblin di sopravvivere nella zona nonostante la continua "
 "minaccia di uomini ed elfi. Si dice che il suo lupo avesse massacrato "
 "cinquanta uomini e un centinaio di elfi.\n"
+"\n"
 "Quindi, quando sentì parlare del terribile mostro che si era insediato nella "
 "zona, si fece avanti credendo di essere l’unico che avrebbe potuto "
 "sconfiggerlo. Tutti gli altri goblin si aspettavano che avrebbe abbattuto "
-"facilmente quell’orribile creatura e che avrebbe trascinata sino al "
-"villaggio la sua carcassa per poter festeggiare.\n"
+"facilmente quell’orribile creatura e che avrebbe trascinato la sua carcassa "
+"sino al villaggio per poter festeggiare.\n"
+"\n"
 "Quando entrò, ebbe paura. Appena vide il basilisco, Blum Duk sentì gelare le "
 "sue ossa. Tentò di far voltare il suo lupo per fuggire, ma l’animale non si "
-"sarebbe mosso. Quando vide l’orribile creatura correre verso di lui, gridò "
-"le sue ultime parole: «Buon Gog, cane, ma di cosa son fatti i tuoi piedi, di "
-"pietra?!?»\n"
+"sarebbe più mosso. Quando vide l’orribile creatura correre verso di lui, "
+"gridò le sue ultime parole: «Buon Gog, cane, ma di cosa son fatti i tuoi "
+"piedi, di pietra?!?»\n"
 "(inciso dall’elfo razziatore)"
 
 #. [side]
@@ -871,7 +891,7 @@ msgid ""
 "(inscribed by Turin)"
 msgstr ""
 "Aveva vissuto in quel luogo per lunghissimi tempi, nelle profondità "
-"dell’acqua, predando i vari pesci le rane e i nereidi che entravano nel suo "
+"dell’acqua, predando i vari pesci, le rane e i nereidi che entravano nel suo "
 "dominio. Era il suo lago e di nessun altro e, benché non fosse grande, era "
 "il suo padrone. Allora, il basilisco venne per guardare negli occhi del "
 "serpente. Il serpente non morì, ma non era più vivo. Così il nuovo signore "
@@ -923,6 +943,25 @@ msgstr "Bramwythl"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:194
+#, fuzzy
+#| msgid ""
+#| "Bramwythl the Wose was always considered a slow, taciturn fellow, even by "
+#| "other Woses. More than any other Wose, he enjoyed simply standing alone "
+#| "in the sun, arms upraised, admiring the beauty of the empty sky. Once, "
+#| "even, he confided in a fellow that his greatest wish was to be able to "
+#| "bask forever in the sun’s glory.\n"
+#| "\n"
+#| "However, not long after, the local wose community heard of the approach "
+#| "of a horrible monster, powerful enough to easily destroy the few woses "
+#| "that lived in the area. They quickly moved off (quickly for Woses, "
+#| "anyway), but Bramwythl was left behind — in their haste, no one had "
+#| "remembered to find him and tell him of the danger.\n"
+#| "\n"
+#| "He was taken quite unawares by the Basilisk, and turned to stone before "
+#| "he even recognized the beast. His petrified form still stands there "
+#| "today, warmed by the sun’s rays, under an open sky. His greatest wish has "
+#| "been granted.\n"
+#| "(inscribed by Elvish Pillager)"
 msgid ""
 "Bramwythl the Wose was always considered a slow, taciturn fellow, even by "
 "other Woses. More than any other Wose, he enjoyed simply standing alone in "
@@ -945,11 +984,13 @@ msgstr ""
 "sole, con le braccia spalancate, ad ammirare la bellezza del cielo limpido. "
 "Una volta, addirittura, confidò a un suo compagno che il suo più grande "
 "desiderio era quello di poter rimanere per sempre nella gloria del sole.\n"
+"\n"
 "Tuttavia, poco dopo, la comunità di wose del luogo sentì parlare dell’arrivo "
 "di un orribile mostro, tanto potente da distruggere facilmente i pochi wose "
 "che vivevano nella zona. Decisero di andare via rapidamente (rapidamente per "
 "dei wose, naturalmente), ma Bramwythl venne lasciato indietro – nella "
 "fretta, nessuno si era ricordato di cercarlo per dirgli del grave pericolo.\n"
+"\n"
 "Venne sorpreso dal basilisco e tramutato pietra prima che riuscisse a "
 "riconoscere la bestia. La sua forma pietrificata ancora oggi si leva in "
 "piedi là, scaldata dai raggi del sole, sotto il cielo limpido. Il suo "
@@ -2750,6 +2791,12 @@ msgstr ""
 
 #~ msgid "Sides %s and %d are tied."
 #~ msgstr "Le squadre %s e %d sono accoppiate."
+
+#~ msgid "Turin's Monster of the Lake"
+#~ msgstr "Mostro del lago di Turin"
+
+#~ msgid "The Spider"
+#~ msgstr "Il Ragno"
 
 #~ msgid "Default + Khalifate"
 #~ msgstr "Era predefinita + Califfato"
