--- a/po/wesnoth-sota/it.po
+++ b/po/wesnoth-sota/it.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2019-02-09 11:25+0100\n"
+"PO-Revision-Date: 2019-03-15 21:48+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: \n"
 "Language: it\n"
@@ -4139,6 +4139,21 @@ msgstr "Epilogo"
 
 #. [part]
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/22_Epilogue.cfg:16
+#, fuzzy
+#| msgid ""
+#| "10 VII, 23 YW — Final Entry\n"
+#| "\n"
+#| "We prevailed today on the field, but our victory was somewhat bitter. "
+#| "<i>Everyone</i> was afraid or angry and immediately attacked us instead "
+#| "of listening to our news. I realize now... the world is not ready for our "
+#| "knowledge. They cannot understand that we have conquered that primordial "
+#| "fear: death. Instead, as they look upon us, judgment of our appearance "
+#| "drives them to ignorant terror. I give up on all of them. For now, I "
+#| "shall just withdraw — perhaps live in the old troll city and learn the "
+#| "applications of mountain fire. In some future time, less conservative "
+#| "attitudes may dominate, and our knowledge can be put to good use. I can "
+#| "certainly afford to wait. In the meantime, we are doing what we can to "
+#| "hasten that day."
 msgid ""
 "10 VII, 23 YW — Final Entry\n"
 "\n"
@@ -4155,15 +4170,29 @@ msgstr ""
 "Oggi abbiamo prevalso sul campo di battaglia, ma in un certo senso la nostra "
 "è stata una vittoria amara. <i>Tutti</i> erano intimoriti o adirati al punto "
 "da attaccarci immediatamente, anziché ascoltare le notizie che portavamo. "
-"Ora capisco... Il mondo non è ancora pronto per le nostre conoscenze. Ci "
-"rinuncio, lascio perdere tutto. Ho intenzione di andare a vivere nella "
-"vecchia città dei troll e apprendere le applicazioni del fuoco della "
-"montagna. In un qualche futuro prevarranno atteggiamenti meno conservatori e "
-"io posso di certo permettermi di aspettare. Nel frattempo, faremo ciò che è "
-"in nostro potere per accelerare l’avvento di quel giorno."
+"Ora capisco... Il mondo non è ancora pronto per le nostre conoscenze. Non "
+"possono comprendere che abbiamo sconfitto il terrore primordiale: la morte. "
+"Invece, quando ci guardano, l’apparenza li porta verso un terrore ignorante. "
+"Ci rinuncio, lascio perdere tutto. Mi ritirerò , ho intenzione di andare a "
+"vivere nella vecchia città dei troll e apprendere le applicazioni del fuoco "
+"della montagna. In un qualche futuro prevarranno atteggiamenti meno "
+"conservatori e io posso di certo permettermi di aspettare. Nel frattempo, "
+"faremo ciò che è in nostro potere per accelerare l’avvento di quel giorno."
 
 #. [then]
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/22_Epilogue.cfg:31
+#, fuzzy
+#| msgid ""
+#| "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. "
+#| "Most of the others are going with him. I wish them success. Vendraxis now "
+#| "knows what he must learn to replicate our metamorphosis. He will use the "
+#| "years left to him in study and practice while he attempts to change the "
+#| "attitudes of his people. As for me, I will make my journal conspicuous on "
+#| "this battlefield. I suspect that most will fear it enough to try to "
+#| "destroy it, but I have placed several wards on my journal to protect it. "
+#| "This way, it should survive long enough to make its way into the hands of "
+#| "someone more open-minded. Tath, in particular, is home to many mages. It "
+#| "only takes one who is willing to learn the secrets of the ancients."
 msgid ""
 "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. Most "
 "of the others are going with him. I wish them success. Vendraxis now knows "
@@ -4179,13 +4208,26 @@ msgstr ""
 "avere successo. Vendraxis ora sa cosa deve apprendere per replicare la "
 "nostra metamorfosi; trascorrerà gli anni che gli rimangono nello studio e "
 "nella pratica, mentre cercherà nel frattempo di mutare l’attitudine del suo "
-"popolo. Per quanto riguarda me, ho lanciato alcuni incantesimi sul mio "
-"diario affinché non venga distrutto e ne sfoggerò le capacità su questo "
-"campo di battaglia. Spero che un giorno possa cadere nelle mani di qualche "
-"cittadino di Tath desideroso di apprendere i segreti degli antichi."
+"popolo. Per quanto riguarda me, sfoggerò le capacità del mio diario su "
+"questo campo di battaglia. Sospetto che la maggior parte di loro lo tema al "
+"punto da tentare di distruggerlo, ma ho lanciato su di esso alcuni "
+"incantesimi per proteggerlo. In questo modo, spero che rimanga integro e che "
+"un giorno possa cadere nelle mani di qualcuno di mente più aperta. Tath, in "
+"particolare, è la casa di molti maghi. Basta che uno di loro sia desideroso "
+"di apprendere i segreti degli antichi."
 
 #. [else]
 #: data/campaigns/Secrets_of_the_Ancients/scenarios/22_Epilogue.cfg:34
+#, fuzzy
+#| msgid ""
+#| "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. "
+#| "Most of the others are going with him. I wish them success. As for me, I "
+#| "will make my journal conspicuous on this battlefield. I suspect that most "
+#| "will fear it enough to try to destroy it, but I have placed several wards "
+#| "on my journal to protect it. This way, it should survive long enough to "
+#| "make its way into the hands of someone more open-minded. Tath, in "
+#| "particular, is home to many mages. It only takes one who is willing to "
+#| "learn the secrets of the ancients."
 msgid ""
 "Ras-Tabahn is going to rebuild his strength and continue to Elensefar. Most "
 "of the others are going with him. I wish them success. As for me, I have "
@@ -4196,10 +4238,13 @@ msgid ""
 msgstr ""
 "Ras-Tabahn intende ricostituire la sua armata e procedere alla volta di "
 "Elensefar. Gran parte degli altri andranno con lui: auguro a tutti loro di "
-"avere successo. Per quanto riguarda me, ho lanciato alcuni incantesimi sul "
-"mio diario affinché non venga distrutto e ne sfoggerò le capacità su questo "
-"campo di battaglia. Spero che un giorno possa cadere nelle mani di qualche "
-"cittadino di Tath desideroso di apprendere i segreti degli antichi."
+"avere successo. Per quanto riguarda me, sfoggerò le capacità del mio diario "
+"su questo campo di battaglia. Sospetto che la maggior parte di loro lo tema "
+"al punto da tentare di distruggerlo, ma ho lanciato su di esso alcuni "
+"incantesimi per proteggerlo. In questo modo, spero che rimanga integro e che "
+"un giorno possa cadere nelle mani di qualcuno di mente più aperta. Tath, in "
+"particolare, è la casa di molti maghi. Basta che uno di loro sia desideroso "
+"di apprendere i segreti degli antichi."
 
 #. [unit_type]: id=Bone Bird, race=undead, description=
 #: data/campaigns/Secrets_of_the_Ancients/units/Bone_Bird.cfg:4
