--- a/po/wesnoth-thot/it.po
+++ b/po/wesnoth-thot/it.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:02 UTC\n"
-"PO-Revision-Date: 2019-02-12 22:50+0100\n"
+"PO-Revision-Date: 2019-03-15 21:54+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <>\n"
 "Language: it\n"
@@ -1101,6 +1101,12 @@ msgstr "I porta-asce non devono avvicinarsi ai nostri piccoli. All’attacco!"
 
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:198
+#, fuzzy
+#| msgid ""
+#| "We’re grateful for your assistance. Moreover, I’d like to send a couple "
+#| "of our senior apprentices with you to the east. It has come time for them "
+#| "to be journeymen... and I sense something being born to the east that I "
+#| "do not like the feel of."
 msgid ""
 "We’re grateful for your assistance. And I’d like to send a couple of our "
 "senior apprentices with you to the east. It has come time for them to be "
@@ -1114,6 +1120,12 @@ msgstr ""
 
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:203
+#, fuzzy
+#| msgid ""
+#| "We’re grateful for your assistance. Moreover, I’d like to send one of our "
+#| "senior apprentices with you to the east. It has come time for him to be a "
+#| "journeyman... and I sense something being born to the east that I do not "
+#| "like the feel of."
 msgid ""
 "We’re grateful for your assistance. And I’d like to send one of our senior "
 "apprentices with you to the east. It has come time for him to be a "
@@ -1122,7 +1134,7 @@ msgid ""
 msgstr ""
 "Vi siamo grati per il vostro aiuto. E vorrei contraccambiare mandando verso "
 "est con voi uno dei nostri apprendisti più anziani. È giunto per lui il "
-"momento di diventare viaggiatore... e percepisco anche che ad est è sorto "
+"momento di diventare un viaggiatore... e percepisco anche che ad est è sorto "
 "qualcosa che non mi piace per niente."
 
 #. [unit]: type=Mage, id=Lorinne
@@ -1452,11 +1464,15 @@ msgstr ""
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg:379
+#, fuzzy
+#| msgid ""
+#| "They were seeking captives. To what purpose, I cannot say, but I doubt it "
+#| "was any good one."
 msgid ""
 "They were seeking captives. To what purpose, I cannot say. But I doubt it "
 "was any good one."
 msgstr ""
-"Stavano cercando prigionieri. Non so dirti per quale scopo. Ma ho seri dubbi "
+"Stavano cercando prigionieri. Non so dirti per quale scopo, ma ho seri dubbi "
 "che si trattasse di una buona causa."
 
 #. [scenario]: id=09_Forbidden_Forest
@@ -1651,6 +1667,11 @@ msgstr ""
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/10_The_Siege_of_Kal_Kartha.cfg:330
+#, fuzzy
+#| msgid ""
+#| "A runemaster? There have been none such since Thursagan’s day. And for "
+#| "one to lead a holding was unheard-of; they tended towards the solitary "
+#| "life."
 msgid ""
 "A runemaster? There had been none such since Thursagan’s day. And for one to "
 "lead a holding was unheard-of; they tended towards the solitary life."
@@ -1702,13 +1723,18 @@ msgstr ""
 
 #. [message]: speaker=Dulcatulos
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/10_The_Siege_of_Kal_Kartha.cfg:355
+#, fuzzy
+#| msgid ""
+#| "That’s for lords and loremasters to worry about, not the likes of me. I "
+#| "must see to my troop’s care. Food will be brought to you; rest well. We "
+#| "will speak again."
 msgid ""
 "That’s for lords and loremasters to worry about, not the likes of me. I must "
 "see to my troop’s care. Food will be brought to you; rest well, we will "
 "speak again."
 msgstr ""
 "Questa è materia per i signori e per i fabbri esoterici, non per quelli come "
-"me. Io mi devo occupare della salute della mia truppa. Vi sarà portato del "
+"me. Io mi devo occupare della salute delle mie truppe. Vi sarà portato del "
 "cibo: ora riposate bene, discuteremo un’altra volta."
 
 #. [scenario]: id=11_The_Court_of_Karrag
@@ -2876,7 +2902,7 @@ msgstr ""
 #~ "free our kin from your dark sorcery!"
 #~ msgstr ""
 #~ "Noi non siamo usurpatori, ma i liberatori di Kal Kartha! Siamo qui per "
-#~ "liberare quelli della nostra specia dalla tua magia oscura!"
+#~ "liberare quelli della nostra specie dalla tua magia oscura!"
 
 #~ msgid ""
 #~ "You insolent fool! It is I who have led Kal Kartha to glory and I who "
